--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>Boilerplate</title>
+    <title>Indexation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
